--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/logos/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT Department</title>
-
+    <script>
+      (function() {
+        const siteSpecificTheme = window.localStorage.getItem('theme');
+  
+        if (siteSpecificTheme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })();
+    </script>
     <!-- Poppins Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
